--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -79,7 +79,7 @@
 
                 <fieldset class="formulario__campo">
                     <label class="campo__etiqueta" for="cpf">CPF (apenas números)</label>
-                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" type="text" minlength="11" maxlength="14" required/>
+                    <input name="cpf" id="cpf" class="campo__escrita campo__escrita--menor" type="text" minlength="11" maxlength="14" pattern="\d{3}\.?\d{3}\.?\d{3}\.?-?\d{2}" required/>
                     <span class="mensagem-erro"></span>
                 </fieldset>
                 
@@ -162,6 +162,7 @@
             <h2 class="rodape__logo"><span class="rodape__logo--negrito">Moni</span>Bank</h2>
         </section>
     </footer>
-</body>
 
+    <script src="../js/script.js" type="module"></script>
+</body>
 </html>
